[package]
name = "session-svc"
version = "0.1.0"
edition = "2024"

[lib]
name = "session_svc"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }
redis-rs = { path ="../redis-rs" }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
