[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
async-trait = "0.1.89"
bs58 = { version = "0.5.1", features = ["check"] }
chain-core = { path = "crates/chain-core" }
hex = "0.4.3"
rand = "0.10.0"
secp256k1 = { version = "0.31.1", features = ["rand", "recovery"] }
sha3 = "0.10.8"
thiserror = "2.0.18"

[dependencies]
tron = { path = "crates/tron" }
chain-core = { workspace = true }
