[package]
name = "tron"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bs58 = { workspace = true }
chain-core = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
